--- a/test/nextbreak/makefile
+++ b/test/nextbreak/makefile
@@ -29,11 +29,12 @@ sd:
 #	$(HDFMONKEY) get $(EMUSD) /NextZXOS/autoexec.bas autoexec.bas
 #	$(HDFMONKEY) get $(EMUSD) /NextZXOS/autoexec.txt autoexec.txt
 
-mame: build mamekill sd
-#	CMD /C start /d $(MAMEDIR) mame tbblue -window -mouse_device none -skip_gameinfo -natural -ui_active -nounevenstretch -aspect 2:1 -intscalex 2 -video bgfx -bgfx_screen_chains unfiltered -window -hard $(EMUSD)
-	CMD /C start /d $(MAMEDIR) mame tbblue -d -plugin console,nextbreak -window -mouse_device none -skip_gameinfo -ui_active -nounevenstretch -aspect 2:1 -intscalex 2 -video bgfx -bgfx_screen_chains unfiltered -window -hard $(EMUSD)
-#C:\spec\mame\mame.exe tbblue -window -mouse_device none -skip_gameinfo -ui_active -nounevenstretch -aspect 2:1 -video bgfx -bgfx_screen_chains unfiltered -window -hard C:\spec\sd209\cspect-next-2gb.img
-#	nextfaststart,nextbreak 
+mame: build killemu sd
+	CMD /C start /d $(MAMEDIR) mame tbblue -d -plugin console,nextbreak,nextfaststart -joystickprovider none -window -mouse_device none -skip_gameinfo -ui_active -nounevenstretch -aspect 2:1 -intscalex 2 -video bgfx -bgfx_screen_chains unfiltered -window -hard $(EMUSD)
+	
+cspect: build killemu sd
+	CMD /C start /d $(EMUDIR) cspect -w3 -zxnext -nextrom -basickeys -exit -brk -tv -emu -mmc=$(EMUSD)
 
-mamekill:
+killemu:
 	-$(KILL) mame.exe
+	-$(KILL) cspect.exe 
